--- a/hugo.yaml
+++ b/hugo.yaml
@@ -12,6 +12,10 @@ DefaultContentLanguage: en
 # This will make .Summary and .WordCount behave correctly for CJK languages.
 hasCJKLanguage: false
 
+caches:
+  images:
+    dir: :cacheDir/images
+
 languages:
     en:
         languageName: English
